# capstone_ws

./: README.md  go2_ai_mode_bridge.py
Hdl-Localization-ROS2-Humble/hdl_global_localization/src/: hdl_global_localization_node.cpp
Hdl-Localization-ROS2-Humble/hdl_localization/apps/: hdl_localization_nodelet.cpp
Hdl-Localization-ROS2-Humble/hdl_localization/launch/: hdl_localization_go2.launch.py
glim/config/: config_preprocess.json  config_ros.json  config_sensors.json
glim/dump/: graph.txt  odom_imu.txt  odom_lidar.txt
glim/dump/000000/: data.txt  (+1 more)
glim/map/: glim_map.pgm  glim_map.yaml  map.ply
glim_ros2/config/: config_ros.json  config_sensors.json
glim_ros2/map/: graph.txt  odom_imu.txt  odom_lidar.txt  traj_imu.txt  traj_lidar.txt
glim_ros2/src/: glim_rosnode.cpp
go2_bringup/: README.md  package.xml
go2_bringup/launch/: go2.launch.py  go2_oringin.launch .py
go2_description/: CMakeLists.txt  package.xml
go2_description/launch/: robot.launch.py
go2_description/urdf/: gazebo.urdf.xacro  go2_description.urdf  go2_description.urdf.xacro  leg.urdf.xacro  transmission.urdf.xacro
go2_driver/: README.md  dependencies.repos  package.xml
go2_driver/launch/: go2_driver.launch.py
go2_interfaces/: CMakeLists.txt  README.md  package.xml
go2_interfaces/.github/workflows/: humble.yaml  humble_devel.yaml
go2_interfaces/srv/: GetBodyHeight.srv  GetBrightness.srv  GetFootRaiseHeight.srv  GetSpeedLevel.srv  GetState.srv  GetSwitch.srv  GetSwitchObstaclesAvoidance.srv  GetVolume.srv  Mode.srv  Say.srv  SetBrightness.srv  SetSwitch.srv  SetSwitchObstaclesAvoidance.srv  SetVolume.srv
go2_robot/: LICENSE  README.md  dependencies.repos  package.xml
go2_robot/.github/: labeler.yml  pull_request_template.md
go2_robot/.github/ISSUE_TEMPLATE/: bug-report.yaml  documentation-report.yaml  error-report.yaml  feature-report.yaml  help-question-report.yaml
go2_robot/.github/workflows/: humble.yaml  humble_devel.yaml  labeler.yml
go2_rviz/: README.md  package.xml
go2_rviz/.github/: pull_request_template.md
go2_rviz/config/: go2_rviz.rviz
go2_rviz/launch/: rviz.launch.py
ouster-ros/ouster-ros/: CMakeLists.txt
rko_lio/: .clang-format  .clang-tidy  .gitignore  Makefile  README.md  default.yaml  package.xml
rko_lio/.git_nested_backup_20260328/objects/pack/: pack-f4d650f5d3b351398a6aad65cb66ab5f335d29db.idx
rko_lio/.github/workflows/: python_bindings_macos_15.yaml  python_bindings_reusable.yaml  python_bindings_ubuntu_2404_arm.yaml  ros_build_jazzy.yaml  ros_build_kilted.yaml  ros_build_reusable.yaml
rko_lio/cmake/: dependencies.cmake
rko_lio/cmake/dependencies/bonxai/: README.md
rko_lio/cmake/dependencies/json/: nlohmann_json.cmake
rko_lio/cmake/dependencies/sophus/: sophus.cmake
rko_lio/cpp/rko_lio/core/: lio.cpp  process_timestamps.cpp  process_timestamps.hpp  profiler.hpp  util.hpp  voxel_down_sample.cpp  voxel_down_sample.hpp
rko_lio/docs/: data.md
rko_lio/python/: pyproject.toml
rko_lio/python/config/: leg_kilo.yaml  oxford_spires.yaml
rko_lio/python/pybind/: CMakeLists.txt
rko_lio/python/rko_lio/: lio_pipeline.py  scoped_profiler.py
rko_lio/python/rko_lio/dataloaders/: __init__.py  get_dataloader.py  helipr.py
rko_lio/python/rko_lio/dataloaders/utils/: ros_read_point_cloud.py  static_tf_tree.py
rko_lio/python/tests/: test_lio_pipeline.py
rko_lio/ros/: README.md
rko_lio/ros/config/: default.rviz  default.yaml
rko_lio/ros/rko_lio/: CMakeLists.txt  node.hpp  offline_node.cpp
rko_lio/ros/rko_lio/ros_utils/: point_cloud_read.hpp  point_cloud_write.cpp  rosbag_utils.cpp  rosbag_utils.hpp  transforms.hpp
src/rko_lio/: .cmake-format.py  .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  colcon.pkg  default.rviz  run.sh
src/rko_lio/.git_nested_backup_20260328/: config  index  packed-refs
src/rko_lio/.git_nested_backup_20260328/logs/refs/remotes/origin/: HEAD
src/rko_lio/.git_nested_backup_20260328/refs/heads/: master
src/rko_lio/.github/ISSUE_TEMPLATE/: bug_report.md
src/rko_lio/.github/workflows/: ensure_versions_match.yaml  pypi.yaml  python_bindings_macos_14.yaml  python_bindings_ubuntu_2204.yaml  python_bindings_ubuntu_2204_arm.yaml  python_bindings_ubuntu_2404.yaml  python_bindings_windows_11_arm.yaml  python_bindings_windows_2022.yaml  ros_build_humble.yaml  ros_build_rolling.yaml
src/rko_lio/cmake/dependencies/bonxai/: bonxai.cmake
src/rko_lio/cmake/dependencies/bonxai/bonxai_core/: CMakeLists.txt
src/rko_lio/cmake/dependencies/eigen/: eigen.cmake
src/rko_lio/cmake/dependencies/tbb/: tbb.cmake
src/rko_lio/cpp/rko_lio/core/: CMakeLists.txt  global_map_matcher.cpp  global_map_matcher.hpp  lio.hpp  sparse_voxel_grid.cpp  sparse_voxel_grid.hpp
src/rko_lio/docs/: build.md  config.md
src/rko_lio/python/: Makefile  README.md
src/rko_lio/python/pybind/: helipr_file_reader_pybind.cpp  rko_lio_pybind.cpp  stl_vector_eigen.hpp
src/rko_lio/python/rko_lio/: cli.py  lio.py  rko_lio.rbl  util.py
src/rko_lio/python/rko_lio/dataloaders/: raw.py  rosbag.py
src/rko_lio/python/rko_lio/dataloaders/utils/: __init__.py
src/rko_lio/python/tests/: test_imports.py  test_lio_pybind.py
src/rko_lio/ros/launch/: odometry.launch.py
src/rko_lio/ros/rko_lio/: node.cpp  online_node.cpp
src/rko_lio/ros/rko_lio/ros_utils/: CMakeLists.txt  point_cloud_read.cpp  point_cloud_write.hpp  ros_utils.hpp  ros_vectors.hpp  time.hpp
unitree_api/: CMakeLists.txt
unitree_go/: CMakeLists.txt  package.xml
yeah_bringup/: CMakeLists.txt  package.xml
yeah_bringup/config/: go2_ouster_odom.rviz  nav2_go2.yaml  rko_go2_localization.yaml  rko_lio_go2.rviz  rko_lio_go2.yaml
yeah_bringup/launch/: go2_ouster.launch.py  go2_ouster_rko_PRE_MERGE_20260328.launch.py  go2_ouster_rko_lio.launch.py  go2_ouster_rko_lio_PRE_MERGE_20260328.launch.py  go2_ouster_rko_lio_nav2.launch.py  hdl_localization_rosbag.launch.py
yeah_bringup/map/: b1_hallway_20260323.pcd  b1_hallway_20260323.ply  glim_map.pcd
yeah_bringup/map/b1_hallway/: map.yaml
yeah_bringup/scripts/: goal_pose_to_nav2_action.py  imu_to_glim.py  imu_to_go2imu.py
(+108 files in other folders)
