<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
  <name>rko_lio</name>
  <version>0.1.3</version>
  <description>A Robust Approach for LiDAR-Inertial Odometry Without Sensor-Specific Modelling</description>
  <maintainer email="rm.meher97@gmail.com">Meher Malladi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- core dependencies -->
  <depend>eigen</depend>
  <depend>sophus</depend>
  <depend>tbb</depend>
  <depend>nlohmann-json-dev</depend>
  <!-- ros dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
