[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "rko_lio"
version = "0.1.3"
description = "A Robust Approach for LiDAR-Inertial Odometry Without Sensor-Specific Modelling"
authors = [{ name = "Meher Malladi", email = "rm.meher97@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: Unix",
]
keywords = [
  "LiDAR",
  "IMU",
  "Odometry",
  "Localization",
  "SLAM",
]
dependencies = ["numpy", "typer", "pyyaml", "pyquaternion", "tqdm"]

[project.optional-dependencies]
all = [
  "open3d",
  "rerun-sdk",
  "rosbags",
  "pytest"
]

[project.urls]
Homepage = "https://github.com/PRBonn/rko_lio"

[project.scripts]
rko_lio = "rko_lio.cli:app"

[tool.scikit-build]
wheel.packages = ["rko_lio"]
build-dir = "build/{wheel_tag}"
build.verbose = true
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true

[tool.scikit-build.cmake]
source-dir = "pybind"
version = ">=3.28"
build-type = "Release"

[tool.scikit-build.cmake.define]
CMAKE_EXPORT_COMPILE_COMMANDS = "ON"
CMAKE_POSITION_INDEPENDENT_CODE = "ON"
RKO_LIO_FETCH_CONTENT_DEPS = "ON"
RKO_LIO_BUILD_ROS = "OFF"

[tool.cibuildwheel]
environment = { GIT_LFS_SKIP_SMUDGE = "1" }
archs = ["auto64"]
skip = ["*-musllinux*", "pp*", "cp38-*", "cp39-*"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=11.0"
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
